atulizei as imagems

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -31,7 +31,7 @@
         <h1 id="titulo-produtos">Produtos</h1><hr>
         <div id="container">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="" alt="Imagem de capa do card">
+                <img class="card-img-top" src="../imagems/image.jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                   <h5 class="card-title">Shampoo</h5>
                   <p class="card-text">Umedeça o couro cabeludo e os fios, coloque a quantidade suficiente de shampoo, massageie utilizando as pontas dos dedos, enxágue abundantemente e repita o processo, se necessário. Aplique a máscara e o condicionador.</p>
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="https://lh3.googleusercontent.com/z5pQzW9qTX6Z4GNJ5h4Iv68fjO6eiOA5fiacVerI2ZXrysIryJb_v6lfALc0PwyEiEbM1mKOlDx98FMNF_CTCMZVQlYTFNg4dyX-fjD2-9XjqTSNdyvNXO8MPN_QNCJ2jg=w1280" alt="Imagem de capa do card">
+                <img class="card-img-top" src="../imagems/image (1).jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                   <h5 class="card-title">Condicionador</h5>
                   <p class="card-text">Lave os cabelos, massageando bem o couro cabeludo, enxágue os fios e, aplique o condicionador a partir do comprimento até as pontas, evitando a raiz. Caso seja dia de tratamento, aplique a máscara primeiro, remova a máscara, retire um pouco do excesso de água do cabelo e aplique o condicionador. </p>
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="https://lh5.googleusercontent.com/27p_R3zc_EpvA97c7V1ceNINnt2Lk_wDBj9VrGHaRX60EetQXP88CUNpIphepWKX0pkTVdYym21wKI5jyg8KOEyGkkKwfqmCzMjvw5pt-BHcyHABHWnZRSjp3YMNJX1UrA=w1280" alt="Imagem de capa do card">
+                <img class="card-img-top" src="../imagems/image (2).jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                   <h5 class="card-title">Mascara Capilar</h5>
                   <p class="card-text">Lave os cabelos, massageando bem o couro cabeludo, enxágue os fios e, caso, aplique a máscara deixe agir por 10 a 20 minutos, remova a máscara, retire um pouco do excesso de água do cabelo, e aplique o condicionador a partir do comprimento até as pontas, evitando a raiz.</p>
