atualizaçao de erros

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -8,25 +8,21 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header id="foto-principal-main">
+    <header>
         <nav class="nav">
             <a class="nav-link" href="#titulo-acmella">ACMELLA</a>
             <a class="nav-link" href="#titulo-produtos">PRODUTOS</a>
             <a class="nav-link" href="#titulo-sobre">SOBRE</a>
             <a class="nav-link" href="#titulo-contato">CONTATOS</a>
         </nav>
-        <section>
-        <h1 id="h1-foto-principal" class="h1">ACMELLA COSMETICOS</h1>
-        </section>
     </header>
+    <section class="foto-principal-main">
+    </section>
     <main>
         <h1 id="titulo-acmella">ACMELLA</h1><hr>
         <p>Planta cultivada na região norte do país, onde é utilizada como condimento culinário amazônico, principalmente para ao preparar o famoso “molho-de-tucupi”. As folhas e inflorescência são empregadas na medicina caseira na região norte do país, para tratamento de males da boca e garganta, além de tuberculose e litíase pulmonar. As folhas e flores quando mastigadas dão uma sensação de formigamento nos lábios e na língua devido sua ação anestésica local, sendo por isso usada para dor-de-dente como anestésico e como estimulante do apetite. O chá das folhas e inflorescência é empregada também, contra anemia, escorbuto, dispepsia e como estimulante da atividade estomáquica.[5] A substancia responsável pela ação anestésica na mucosa bucal é uma isobutilamida denominada espilantol. Na sua composição química, além de espilantol, são citados a espilantina,afinina, colina e fitosterina.</p>
         <p>Uma nova espécie para o gênero Acmella foi detectada. As exsicatas coletadas no município de Soure, na Ilha do Marajó, Pará, continham diversos indivíduos que haviam sido identificados como Spilanthes sp. e Eclipta sp., permanecendo assim, incorporados junto a esses gêneros. Após análise minuciosa do material, com base na fotografia dos tipos, descrições obtidas da revisão do gênero contidas em Jansen (1985), bem como, consultas aos acervos do Jardim Botânico do Rio de Janeiro (RB) e Museu Nacional (R) foi constatado que se tratava de uma nova espécie para a ciência.</p>
-        <section id="amazonia">
-            <h1 id="ti">
-                Refletindo a Beleza amazônica em <u>Você</u>
-            </h1>
+        <section class="foto-principal-main-amazonia">
         </section>
         <h1 id="titulo-produtos">Produtos</h1><hr>
         <div id="container">
