--- a/paginas/menufixo.html
+++ b/paginas/menufixo.html
@@ -3,62 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Fixo</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
-        *{
+        /*Importando as 2 fontes que eu usei no site original*/
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap');
+
+        :root{
+            --fonte1: 'Inter'
+            --fonte2: 'Poppins'
+        }
+        html, body{
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-        }
-        .center{
-            max-width: 1100px;
-            margin: 0 auto;
-            padding:  0 2%;
+            scroll-behavior: smooth;
         }
         header{
-            text-align: center;
-            padding: 9px 0;
-            background-color: rgb(28, 34, 191);
             position: fixed;
             left: 0;
             top: 0;
             width: 100%;
-        }
-        header li{
-            display: inline-block;
-            margin:0 10px;
-
+            box-shadow: 1px 1px 10px black;
         }
         header a {
-            text-decoration: none;
-            color: white;
+            font-family: 'Inter';
+            color: #ffda05;
         }
-        .conteudo{
+        .nav{
+            height: 60px;
+            padding: 10px;
+            text-align: center;
+            background-color: rgb(255, 255, 255);
+        }
+        /* ESSE <P> È APENAS UM EXEMPLO PARA TU(LUMA), È PARA VC EXCLUIR*/
+        p{
             height: 2000px;
+            margin-top: 68px;
         }
-        section.content{
-            margin-top: 50px;
-        }
+        /* O elemento que estiver ABAIXO DO MENU TEM QUE TER MARGIN-TOP:68px; MAIS OU MENOS*/
     </style>
 </head>
 <body>
     <header>
-        <div class="center">
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Contato</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="nav">
+            <a class="nav-link" href="#titulo-acmella">ACMELLA</a>
+            <a class="nav-link" href="#titulo-produtos">PRODUTOS</a>
+            <a class="nav-link" href="#titulo-sobre">SOBRE</a>
+            <a class="nav-link" href="#titulo-contato">CONTATOS</a>
+        </nav>
     </header>
-    <section class="content">
-        <div class="center">
-            <div class="conteudo">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat architecto voluptas corrupti id doloribus possimus voluptates enim laudantium maiores reprehenderit? Animi eum eaque tempora tenetur nisi laborum natus fugit consequuntur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis pariatur eum reprehenderit vitae laboriosam labore suscipit laborum veritatis natus. Asperiores, itaque error? A, molestiae repellendus. Qui ea inventore voluptatum asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus laborum, vitae ad quo id veniam nisi ipsam, rem provident ratione iure fugit saepe officia libero soluta voluptas? Eius, nostrum voluptas!
-            </div>
-        </div>
-    </section>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut, iure. Perferendis mollitia rerum eum velit, nisi nihil illum, consequatur suscipit quae tenetur expedita similique aut soluta nesciunt magni doloribus pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nam officiis nemo totam vero velit saepe ratione quisquam aliquam pariatur rem earum quos corrupti voluptas, aut, consectetur beatae natus dolorum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, quasi. Quae explicabo nulla, libero perferendis, sed consectetur nostrum at non unde delectus accusamus. Repellendus voluptatum magni totam, modi harum distinctio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi doloremque neque consequuntur facilis sequi, dolorem eveniet nemo, ipsum quaerat quo reprehenderit exercitationem? Perferendis nisi officiis alias optio. Aut, id ipsam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure natus suscipit vero cumque, perferendis eius harum, deserunt, hic pariatur asperiores necessitatibus ipsa id molestiae. Modi non voluptas repellendus laboriosam nesciunt.</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
