--- a/paginas/menufixo copy.html
+++ b/paginas/menufixo copy.html
@@ -95,6 +95,11 @@
             font-family: 'Poppins','arial';
             background-image: linear-gradient(to right,rgba(255, 192, 203, 0.234),rgba(255, 166, 0, 0.603));
         }
+        .nav > a:hover{
+                transform: scale(1.2);
+                color: #ffd900;
+                translate: 1rem;
+            }
         @media screen and (max-width:768px){
             main{
             max-width: 1000px;
