--- a/paginas/PRODUTOS.html
+++ b/paginas/PRODUTOS.html
@@ -141,7 +141,7 @@
     
     <header>
         <nav class="nav">
-            <a class="nav-link" href="#titulo-acmella">ACMELLA</a>
+            <a class="nav-link" href="index.html">ACMELLA</a>
             <a class="nav-link" href="#titulo-produtos">PRODUTOS</a>
             <a class="nav-link" href="#titulo-sobre">SOBRE</a>
             <a class="nav-link" href="#titulo-contato">CONTATOS</a>
