--- a/paginas/index.html
+++ b/paginas/index.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="btn btn-primary" id="produtos">MAIS PRODUTOS</a>
+        <a href="PRODUTOS.html" class="btn btn-primary" id="produtos">MAIS PRODUTOS</a>
         <h1 id="titulo-sobre">Sobre</h1><hr>
         <p>
             <h2>Descubra a Beleza que Existe em Você com ACMELLIA Cosméticos</h2>
