--- a/paginas/PRODUTOS.html
+++ b/paginas/PRODUTOS.html
@@ -47,7 +47,7 @@
         }
         main h1{
             text-align: center;
-            color: #303136;
+            color: #FFD700;
             font-family: 'Inter','Arial','sans-senrif';
             margin: 30px;
         }
@@ -67,7 +67,7 @@
         }
         footer {
             width: 100%;
-            background-image: linear-gradient(to right,rgba(255, 192, 203, 0.234),rgba(255, 166, 0, 0.603));
+            background-image: linear-gradient(to right,rgba(255, 192, 203, 0.234),rgba(255, 72, 0, 0.894));
             font: normal 11pt arial;
             padding: 0;
             margin-top: 30px;
@@ -99,7 +99,15 @@
                 transform: scale(1.2);
                 color: #ffd900;
                 translate: 1rem;
-            }
+        }
+        .nav > a{
+            color: #FF8C00;
+        }
+        .btn{
+            background-color:#FF8C00 ;
+            color: #ffffff;
+            border-color: #FF8C00;
+        }
         @media screen and (max-width:768px){
             main{
             max-width: 1000px;
