--- a/paginas/index.html
+++ b/paginas/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <nav class="nav">
+            <a class="nav-link" href="#foto-principal-main">INCIO</a>
             <a class="nav-link" href="#titulo-acmella">ACMELLA</a>
             <a class="nav-link" href="#titulo-produtos">PRODUTOS</a>
             <a class="nav-link" href="#titulo-sobre">SOBRE</a>
