--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1 id="titulo-produtos">Produtos</h1><hr>
         <div id="container">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="../imagems/image.jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imagems/image.jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                   <h5 class="card-title">Shampoo</h5>
                   <p class="card-text">Umedeça o couro cabeludo e os fios, coloque a quantidade suficiente de shampoo, massageie utilizando as pontas dos dedos, enxágue abundantemente e repita o processo, se necessário. Aplique a máscara e o condicionador.</p>
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="../imagems/image (1).jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imagems/image (1).jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                   <h5 class="card-title">Condicionador</h5>
                   <p class="card-text">Lave os cabelos, massageando bem o couro cabeludo, enxágue os fios e, aplique o condicionador a partir do comprimento até as pontas, evitando a raiz. Caso seja dia de tratamento, aplique a máscara primeiro, remova a máscara, retire um pouco do excesso de água do cabelo e aplique o condicionador. </p>
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="../imagems/image (2).jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imagems/image (2).jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                   <h5 class="card-title">Mascara Capilar</h5>
                   <p class="card-text">Lave os cabelos, massageando bem o couro cabeludo, enxágue os fios e, caso, aplique a máscara deixe agir por 10 a 20 minutos, remova a máscara, retire um pouco do excesso de água do cabelo, e aplique o condicionador a partir do comprimento até as pontas, evitando a raiz.</p>
