Mudando na pagina de produtos

--- a/PRODUTOS.html
+++ b/PRODUTOS.html
@@ -163,7 +163,7 @@
         <h2>Capilar</h2>
         <div class="container">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="/imagems/image.jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imagems/image.jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                   <h5 class="card-title">Shampoo</h5>
                   <p class="card-text">R$ 65,00</p>
@@ -171,7 +171,7 @@
                 </div>
               </div>
               <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="/imagems/image (1).jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imagems/image (1).jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                   <h5 class="card-title">Condicionador</h5>
                   <p class="card-text">R$ 70,00</p>
@@ -179,7 +179,7 @@
                 </div>
               </div>
               <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="/imagems/image (2).jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imagems/image (2).jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                   <h5 class="card-title">Mascara Capilar</h5>
                   <p class="card-text">R$ 95,00</p>
@@ -190,7 +190,7 @@
         <h2>Facial</h2>
         <div class="container">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="/imagems/image (3).jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imagems/image (3).jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                   <h5 class="card-title">hidratante Labial</h5>
                   <p class="card-text">R$ 55,00</p>
@@ -198,7 +198,7 @@
                 </div>
               </div>
               <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="/imagems/image (4).jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imagems/image (4).jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                   <h5 class="card-title">Serum Facial</h5>
                   <p class="card-text">R$ 125,00</p>
@@ -206,7 +206,7 @@
                 </div>
               </div>
               <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="/imagems/image (5).jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imagems/image (5).jpg" alt="Imagem de capa do card">
                 <div class="card-body">
                   <h5 class="card-title">Creme facial</h5>
                   <p class="card-text">R$ 110,00</p>
