--- a/PRODUTOS.html
+++ b/PRODUTOS.html
@@ -82,7 +82,7 @@
         }
         #foto-principal{
             height: 500px;
-            background: white url('/imagems/fundo-rosa.png') no-repeat center  fixed;
+            background: white url('imagems/fundo-rosa.png') no-repeat center  fixed;
             background-size: cover;
             margin-top: 60px;
         }
@@ -139,7 +139,7 @@
             }
             #foto-principal{
             height: 500px;
-            background: white url('/imagems/fundo-rosa.png') no-repeat top left  fixed;
+            background: white url('imagems/fundo-rosa.png') no-repeat top left  fixed;
             background-size: cover;
         }
         }
