--- a/PRODUTOS.html
+++ b/PRODUTOS.html
@@ -108,6 +108,12 @@
             color: #ffffff;
             border-color: #FF8C00;
         }
+        #logo{
+                min-width: 300px;
+                max-width: 600px;
+                display: block;
+                margin: auto;
+            }
         @media screen and (max-width:768px){
             main{
             max-width: 1000px;
@@ -153,12 +159,17 @@
             }
             footer{
                 margin-top: 0;
-            }   
+            }  
+            #logo{
+                min-width: 300px;
+                max-width: 600px;
+                display: block;
+                margin: auto;
+            }
         }
     </style>
 </head>
 <body>
-    
     <header>
         <nav class="nav">
             <a class="nav-link" href="index.html">ACMELLA</a>
@@ -251,6 +262,7 @@
             
             <P>Quando você escolhe ACMELLIA Cosméticos, está escolhendo mais do que apenas produtos de beleza. Está escolhendo uma experiência que transformará sua rotina de cuidados pessoais em um ritual de autodescoberta e confiança. Sinta a diferença ACMELLIA e descubra a verdadeira beleza que existe em você.</P>
             </p>
+            <img src="imagems/Acmella.png" alt="" id="logo">
     </main>
     <footer id="titulo-contato">
         <div id="container-footer">
