--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <a class="nav-link" href="#titulo-contato">CONTATOS</a>
         </nav>
     </header>
+    <section id="Menu">
+        <img src="imagems/Acmella.png" alt="Logo Acmella" class="logo">
+    </section>
 
     <section class="foto-principal-main" id="foto-principal-main">
     </section>
@@ -81,7 +84,7 @@
             
             <P>Quando você escolhe ACMELLIA Cosméticos, está escolhendo mais do que apenas produtos de beleza. Está escolhendo uma experiência que transformará sua rotina de cuidados pessoais em um ritual de autodescoberta e confiança. Sinta a diferença ACMELLIA e descubra a verdadeira beleza que existe em você.</P>
             </p>
-            <img src="../imagems/Acmella-transformed.png" alt="Logo Acmella">
+            <img src="imagems/Acmella.png" alt="Logo Acmella" class="logo">
     </main>
     <footer id="titulo-contato">
         <div id="container-footer">
