--- a/PRODUTOS.html
+++ b/PRODUTOS.html
@@ -86,12 +86,11 @@
             background-size: cover;
             margin-top: 60px;
         }
-        #foto-principal > p{
+        #foto-principal > .display-1{
             padding-top: 120px;
             color: #303136;
             height: 500px;
             text-align: center;
-            font-size: 100px;
             font-family: 'Poppins','arial';
             background-image: linear-gradient(to right,rgba(255, 192, 203, 0.234),rgba(255, 166, 0, 0.603));
         }
@@ -148,12 +147,11 @@
             background-size: cover;
 
             }
-            #foto-principal > p{
+            #foto-principal > .display-1{
             padding-top: 120px;
             color: #303136;
             height: 500px;
             text-align: center;
-            font-size: 60px;
             font-family: 'Poppins','arial';
             background-image: linear-gradient(to right,rgba(255, 192, 203, 0.234),rgba(255, 166, 0, 0.603));
             }
@@ -161,8 +159,7 @@
                 margin-top: 0;
             }  
             #logo{
-                min-width: 300px;
-                max-width: 600px;
+                width: 300px;
                 display: block;
                 margin: auto;
             }
@@ -179,7 +176,7 @@
         </nav>
     </header>
     <section id="foto-principal">
-        <p>PRODUTOS ACMELLA</p>
+        <h1 class="display-1">ACMELLA PRODUTOS</h1>
     </section>
     <main>
         <h1>Produtos</h1><hr>
