--- a/PRODUTOS.html
+++ b/PRODUTOS.html
@@ -150,16 +150,18 @@
             #foto-principal > .display-1{
             padding-top: 120px;
             color: #303136;
-            height: 500px;
+            height: 100%;
             text-align: center;
             font-family: 'Poppins','arial';
             background-image: linear-gradient(to right,rgba(255, 192, 203, 0.234),rgba(255, 166, 0, 0.603));
+            width: 100%;
+            font-size: 60px;
             }
             footer{
                 margin-top: 0;
             }  
             #logo{
-                width: 300px;
+                width: 50%;
                 display: block;
                 margin: auto;
             }
