--- a/PRODUTOS.html
+++ b/PRODUTOS.html
@@ -54,6 +54,15 @@
         .card{
             margin-right: 10px;
             position: static;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        .card .btn:hover{
+            transform: scale(1.2);
+            background-color: #15c426;
+            border: #303136;
+            color: rgb(255, 255, 255);
+            transition: 0.5s;
+            
         }
         #produtos{
             display: block;
@@ -103,7 +112,7 @@
             color: #FF8C00;
         }
         .btn{
-            background-color:#FF8C00 ;
+            background-color:#e98203 ;
             color: #ffffff;
             border-color: #FF8C00;
         }
@@ -121,9 +130,14 @@
             background-color: white;
             padding-top: 30px;
             }
+            main > p{
+                text-indent: 40px;
+                padding: 20px;
+                text-align: justify;
+            }
             .container{
                 display: flex;
-                flex-direction: row;
+                flex-direction: column;
                 align-items: center;
             }
             .card{
@@ -181,7 +195,7 @@
         <h1 class="display-1">ACMELLA PRODUTOS</h1>
     </section>
     <main>
-        <h1>Produtos</h1><hr>
+        <h1 id="titulo-produtos">Produtos</h1><hr>
         <h2>Capilar</h2>
         <div class="container">
             <div class="card" style="width: 18rem;">
@@ -236,7 +250,7 @@
                 </div>
               </div>
         </div>
-        <p>
+        <p id="titulo-sobre">
             <h2>Descubra a Beleza que Existe em Você com ACMELLIA Cosméticos</h2>
 
             <P>Na ACMELLIA Cosméticos, acreditamos que a verdadeira beleza vem de dentro, mas sabemos que um pouco de cuidado extra pode fazer maravilhas para realçar sua confiança e beleza natural. Nossos produtos são cuidadosamente formulados para oferecer a você uma experiência de beleza única e excepcional.</P>
