--- a/index.html
+++ b/index.html
@@ -10,17 +10,13 @@
 <body>
     <header>
         <nav class="nav">
-            <a class="nav-link" href="#Menu">INCIO</a>
-            <a class="nav-link" href="#titulo-acmella">ACMELLA</a>
+            <a class="nav-link" href="#foto-principal-main">INICIO</a>
             <a class="nav-link" href="#titulo-produtos">PRODUTOS</a>
             <a class="nav-link" href="#titulo-sobre">SOBRE</a>
             <a class="nav-link" href="#titulo-contato">CONTATOS</a>
         </nav>
     </header>
-    <section id="Menu">
-        <img src="imagems/Acmella.png" alt="Logo Acmella" class="logo">
-    </section>
-
+    <div id="logo1"><img src="imagems/Acmella.png" class="img-fluid" alt="LOGO ACMELLA INOVA AMAZONIA"></div>
     <section class="foto-principal-main" id="foto-principal-main">
     </section>
     <main>
@@ -33,26 +29,26 @@
         <h1 id="titulo-produtos">Produtos</h1><hr>
         <div id="container">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="imagems/image.jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imagems/image.jpg" alt="FOTO DO NOSSO SHAMPOO">
                 <div class="card-body">
                   <h5 class="card-title">Shampoo</h5>
-                  <p class="card-text">Umedeça o couro cabeludo e os fios, coloque a quantidade suficiente de shampoo, massageie utilizando as pontas dos dedos, enxágue abundantemente e repita o processo, se necessário. Aplique a máscara e o condicionador.</p>
+                  <p class="card-text">O nosso shampoo revitalizante é formulado com ingredientes de alta qualidade para limpar suavemente e fortalecer os seus cabelos. Com uma textura luxuosa e uma fragrância encantadora, ele deixa os seus cabelos limpos, macios e prontos para brilhar.</p>
                   <a href="#" class="btn btn-primary">Saiba Mais</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="imagems/image (1).jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imagems/image (1).jpg" alt="FOTO DO NOSSO CONDICIONADOR">
                 <div class="card-body">
                   <h5 class="card-title">Condicionador</h5>
-                  <p class="card-text">Lave os cabelos, massageando bem o couro cabeludo, enxágue os fios e, aplique o condicionador a partir do comprimento até as pontas, evitando a raiz. Caso seja dia de tratamento, aplique a máscara primeiro, remova a máscara, retire um pouco do excesso de água do cabelo e aplique o condicionador. </p>
+                  <p class="card-text">O condicionador hidratante é o parceiro perfeito para o nosso shampoo. Ele desembaraça e suaviza os fios, proporcionando hidratação profunda e restaurando a saúde do cabelo. Os seus cabelos ficarão incrivelmente macios e fáceis de pentear. </p>
                   <a href="#" class="btn btn-primary">Saiba Mais</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="imagems/image (2).jpg" alt="Imagem de capa do card">
+                <img class="card-img-top" src="imagems/image (2).jpg" alt="FOTO DA NOSSA MASCARA CAPILAR">
                 <div class="card-body">
                   <h5 class="card-title">Mascara Capilar</h5>
-                  <p class="card-text">Lave os cabelos, massageando bem o couro cabeludo, enxágue os fios e, caso, aplique a máscara deixe agir por 10 a 20 minutos, remova a máscara, retire um pouco do excesso de água do cabelo, e aplique o condicionador a partir do comprimento até as pontas, evitando a raiz.</p>
+                  <p class="card-text">A nossa máscara capilar reparadora é o segredo para cabelos radiantes. Esta fórmula intensiva nutre e revitaliza profundamente, reparando os danos causados pelo dia a dia. Use-a semanalmente para obter resultados surpreendentes.</p>
                   <a href="#" class="btn btn-primary">Saiba Mais</a>
                 </div>
             </div>
