--- a/PRODUTOS.html
+++ b/PRODUTOS.html
@@ -185,7 +185,7 @@
 <body>
     <header>
         <nav class="nav">
-            <a class="nav-link" href="index.html">ACMELLA</a>
+            <a class="nav-link" href="index.html">PAGINA INICIAL</a>
             <a class="nav-link" href="#titulo-produtos">PRODUTOS</a>
             <a class="nav-link" href="#titulo-sobre">SOBRE</a>
             <a class="nav-link" href="#titulo-contato">CONTATOS</a>
