--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="nav">
-            <a class="nav-link" href="#foto-principal-main">INICIO</a>
+            <a class="nav-link" href="#logo1">INICIO</a>
             <a class="nav-link" href="#titulo-produtos">PRODUTOS</a>
             <a class="nav-link" href="#titulo-sobre">SOBRE</a>
             <a class="nav-link" href="#titulo-contato">CONTATOS</a>
@@ -24,7 +24,7 @@
         <h1 id="titulo-acmella">ACMELLA</h1><hr>
         <p>Planta cultivada na região norte do país, onde é utilizada como condimento culinário amazônico, principalmente para ao preparar o famoso “molho-de-tucupi”. As folhas e inflorescência são empregadas na medicina caseira na região norte do país, para tratamento de males da boca e garganta, além de tuberculose e litíase pulmonar. As folhas e flores quando mastigadas dão uma sensação de formigamento nos lábios e na língua devido sua ação anestésica local, sendo por isso usada para dor-de-dente como anestésico e como estimulante do apetite. O chá das folhas e inflorescência é empregada também, contra anemia, escorbuto, dispepsia e como estimulante da atividade estomáquica.[5] A substancia responsável pela ação anestésica na mucosa bucal é uma isobutilamida denominada espilantol. Na sua composição química, além de espilantol, são citados a espilantina,afinina, colina e fitosterina.</p>
         <p>Uma nova espécie para o gênero Acmella foi detectada. As exsicatas coletadas no município de Soure, na Ilha do Marajó, Pará, continham diversos indivíduos que haviam sido identificados como Spilanthes sp. e Eclipta sp., permanecendo assim, incorporados junto a esses gêneros. Após análise minuciosa do material, com base na fotografia dos tipos, descrições obtidas da revisão do gênero contidas em Jansen (1985), bem como, consultas aos acervos do Jardim Botânico do Rio de Janeiro (RB) e Museu Nacional (R) foi constatado que se tratava de uma nova espécie para a ciência.</p>
-        <section class="foto-principal-main-amazonia" id="ft-ama">
+        <section class="foto-principal-main-amazonia" id="ft-ama"><p>O esplendor da Amazônia, capturado em cada produto que oferecemos!</p>
         </section>
         <h1 id="titulo-produtos">Produtos</h1><hr>
         <div id="container">
@@ -84,11 +84,27 @@
     </main>
     <footer id="titulo-contato">
         <div id="container-footer">
-            <h1>CONTATOS</h1>
-            <p>©2023 Acmella Inova Amazonia</p>
-            <p>Email:AcmellaIA@gmail.com</p>
-            <p>Telefone:+55 91 99999-9999</p>
-            <p>Belém - PA</p>
+            <section class="footer-colum">
+                <h3>Informaçoes de contato</h3>
+                <p>Endereço: Rua das Palmeiras, 123, BELÈM /PA</p>
+                <p>Telefone: (99) 1234-5678</p>
+                <p>E-mail: info@acmellainovaamazonia.com</p>
+            </section>
+            <section id="info">
+                <h3>Informações da Empresa</h3>
+                <p>A Acmella Inova Amazônia é uma empresa comprometida com a preservação e valorização da biodiversidade amazônica. Nossa missão é oferecer produtos sustentáveis e de alta qualidade.</p>
+                <p>A Acmella Inova Amazônia é uma empresa apaixonada pela Amazônia, comprometida com a proteção de sua diversidade única. Nossa missão é oferecer produtos excepcionais que não apenas realcem a sua beleza, mas também preservem o esplendor natural da floresta amazônica. </p>
+
+
+
+
+                </p>
+            </section>
+            <section class="footer-colum">
+                <h3>Depoimentos de Clientes:</h3>
+                <p>"Adoro os produtos da Acmella Inova Amazônia, são incrivelmente eficazes e sustentáveis!" - Maria S.</p>
+                <p>"A missão da empresa é admirável. Estou feliz em apoiar produtos que valorizam a Amazônia." - João R.</p>
+            </section>
         </div>
     </footer>
 
