--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <!-- CRIANDO O NOSSO MENU FIXO-->
     <header>
         <nav class="nav">
             <a class="nav-link" href="#logo1">INICIO</a>
@@ -16,22 +17,22 @@
             <a class="nav-link" href="#titulo-contato">CONTATOS</a>
         </nav>
     </header>
-
     
+    <!-- DIV COM A NOSSA LOGO MARCA E UMA IMAGEM DA PLANTA ACMELLA COM UM EFEITO PARALLAX-->
     <div id="logo1"><img src="imagems/Acmella.png" class="img-fluid" alt="LOGO ACMELLA INOVA AMAZONIA"></div>
     <section class="foto-principal-main" id="foto-principal-main">
     </section>
 
-
+    <!-- AQUI È O CONTEUDO PRINCIPAL DA PAGINA COMO: PRODUTOS,SOBRE,ACMELLA-->
     <main>
         <div id="t1"></div>
         <h1 id="titulo-acmella">ACMELLA</h1><hr>
-        <p>Planta cultivada na região norte do país, onde é utilizada como condimento culinário amazônico, principalmente para ao preparar o famoso “molho-de-tucupi”. As folhas e inflorescência são empregadas na medicina caseira na região norte do país, para tratamento de males da boca e garganta, além de tuberculose e litíase pulmonar. As folhas e flores quando mastigadas dão uma sensação de formigamento nos lábios e na língua devido sua ação anestésica local, sendo por isso usada para dor-de-dente como anestésico e como estimulante do apetite. O chá das folhas e inflorescência é empregada também, contra anemia, escorbuto, dispepsia e como estimulante da atividade estomáquica.[5] A substancia responsável pela ação anestésica na mucosa bucal é uma isobutilamida denominada espilantol. Na sua composição química, além de espilantol, são citados a espilantina,afinina, colina e fitosterina.</p>
-        <p>Uma nova espécie para o gênero Acmella foi detectada. As exsicatas coletadas no município de Soure, na Ilha do Marajó, Pará, continham diversos indivíduos que haviam sido identificados como Spilanthes sp. e Eclipta sp., permanecendo assim, incorporados junto a esses gêneros. Após análise minuciosa do material, com base na fotografia dos tipos, descrições obtidas da revisão do gênero contidas em Jansen (1985), bem como, consultas aos acervos do Jardim Botânico do Rio de Janeiro (RB) e Museu Nacional (R) foi constatado que se tratava de uma nova espécie para a ciência.</p>
+        <p>A planta ACMELLA, também conhecida como "jambu," é uma maravilha da biodiversidade amazônica que tem conquistado o mundo com suas propriedades únicas. Com suas folhas e flores vibrantes, a ACMELLA é famosa por seu efeito de formigamento suave quando consumida. Além disso, essa planta é rica em compostos naturais que têm propriedades antioxidantes e anti-inflamatórias. Na ACMELLA INOVA AMAZONIA, estamos orgulhosos de apresentar produtos fictícios exclusivos que incorporam essa planta extraordinária, desde géis para cuidados com a pele até temperos exóticos para sua culinária. Explore nosso catálogo e descubra como a ACMELLA pode elevar sua experiência, oferecendo uma fusão única entre a natureza e a inovação.</p>
+        <p>A ACMELLA é muito mais do que uma planta exótica; é um tesouro natural da Amazônia que tem sido usado há séculos por comunidades indígenas devido às suas propriedades medicinais. Suas flores amarelas brilhantes são frequentemente utilizadas para promover o relaxamento muscular e aliviar dores, enquanto suas folhas são valorizadas por suas propriedades culinárias e medicinais. Além disso, a ACMELLA é uma planta que prospera em um ambiente sustentável, o que a torna um exemplo perfeito de como podemos explorar os recursos da Amazônia de forma responsável. Na ACMELLA INOVA AMAZONIA, celebramos essa planta incrível e a incorporamos de maneira única em nossos produtos fictícios para oferecer a você uma experiência verdadeiramente amazônica.</p>
         <section class="foto-principal-main-amazonia" id="ft-ama"><p>O esplendor da Amazônia, capturado em cada produto que oferecemos!</p>
         </section>
         <h1 id="titulo-produtos">Produtos</h1><hr>
-        <div id="container">
+        <div id="container"><!-- DIV PARA COLOCAR OS CARDS DE PRODUTOS-->
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="imagems/image.jpg" alt="FOTO DO NOSSO SHAMPOO">
                 <div class="card-body">
@@ -58,6 +59,9 @@
             </div>
         </div>
         <a href="PRODUTOS.html" class="btn btn-primary" id="produtos">MAIS PRODUTOS</a>
+        <div id="amazonia2">
+            <p>Beleza Amazônica, Qualidade <span style="color:  #ffb700;">ACMELLA</span>!</p>
+        </div>
         <h1 id="titulo-sobre">Sobre</h1><hr>
         <p>
             <h2>Descubra a Beleza que Existe em Você com ACMELLIA Cosméticos</h2>
@@ -91,13 +95,13 @@
     <footer id="titulo-contato">
         <div id="container-footer">
             <section class="footer-colum">
-                <h3>Informaçoes de contato</h3>
+                <h3>Informaçoes de contato:</h3>
                 <p>Endereço: Rua das Palmeiras, 123, BELÈM /PA</p>
                 <p>Telefone: (99) 1234-5678</p>
                 <p>E-mail: info@acmellainovaamazonia.com</p>
             </section>
             <section id="info">
-                <h3>Informações da Empresa</h3>
+                <h3>Informações da Empresa:</h3>
                 <p>A Acmella Inova Amazônia é uma empresa comprometida com a preservação e valorização da biodiversidade amazônica. Nossa missão é oferecer produtos sustentáveis e de alta qualidade.</p>
                 <p>A Acmella Inova Amazônia é uma empresa apaixonada pela Amazônia, comprometida com a proteção de sua diversidade única. Nossa missão é oferecer produtos excepcionais que não apenas realcem a sua beleza, mas também preservem o esplendor natural da floresta amazônica. </p>
             </section>
