COLOCANDO OS LINKS NO LUGAR

--- a/PRODUTOS.html
+++ b/PRODUTOS.html
@@ -92,7 +92,7 @@
         }
         #foto-principal{
             height: 500px;
-            background: white url('/imagems/ACMELLA\ PRODUTOS.jpg') no-repeat center  fixed;
+            background: white url('imagems/ACMELLA\ PRODUTOS.jpg') no-repeat center  fixed;
             background-size: cover;
             margin-top: 60px;
         }
@@ -190,7 +190,7 @@
             }
             #foto-principal{
             height: 500px;
-            background: white url('/imagems/ACMELLA\ PRODUTOS.jpg') no-repeat center  fixed;
+            background: white url('imagems/ACMELLA\ PRODUTOS.jpg') no-repeat center  fixed;
             background-size: cover;
             margin-top: 60px;
             }
