--- a/PRODUTOS.html
+++ b/PRODUTOS.html
@@ -55,6 +55,8 @@
             margin-right: 10px;
             position: static;
             font-family: Arial, Helvetica, sans-serif;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.376);
+            border-radius: 10px;
         }
         .card .btn:hover{
             transform: scale(1.2);
