--- a/menufixo.html
+++ b/menufixo.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+
+
     <style>
         /*Importando as 2 fontes que eu usei no site original*/
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
@@ -36,24 +39,31 @@
             text-align: center;
             background-color: rgb(255, 255, 255);
         }
-        /* ESSE <P> È APENAS UM EXEMPLO PARA TU(LUMA), È PARA VC EXCLUIR*/
-        p{
-            height: 2000px;
+        .nav > a:hover{
+                transform: scale(1.12);
+                color: #ffd900;
+        }
+        .nav > a{
+            color: #FF8C00;
+            margin: auto;
+        }
+        main{
             margin-top: 68px;
         }
-        /* O elemento que estiver ABAIXO DO MENU TEM QUE TER MARGIN-TOP:68px; MAIS OU MENOS*/
     </style>
 </head>
 <body>
     <header>
         <nav class="nav">
-            <a class="nav-link" href="#titulo-acmella">ACMELLA</a>
-            <a class="nav-link" href="#titulo-produtos">PRODUTOS</a>
-            <a class="nav-link" href="#titulo-sobre">SOBRE</a>
-            <a class="nav-link" href="#titulo-contato">CONTATOS</a>
+            <a class="nav-link" href="#">ACMELLA</a>
+            <a class="nav-link" href="#">PRODUTOS</a>
+            <a class="nav-link" href="#">SOBRE</a>
+            <a class="nav-link" href="#">CONTATOS</a>
         </nav>
     </header>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut, iure. Perferendis mollitia rerum eum velit, nisi nihil illum, consequatur suscipit quae tenetur expedita similique aut soluta nesciunt magni doloribus pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nam officiis nemo totam vero velit saepe ratione quisquam aliquam pariatur rem earum quos corrupti voluptas, aut, consectetur beatae natus dolorum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, quasi. Quae explicabo nulla, libero perferendis, sed consectetur nostrum at non unde delectus accusamus. Repellendus voluptatum magni totam, modi harum distinctio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi doloremque neque consequuntur facilis sequi, dolorem eveniet nemo, ipsum quaerat quo reprehenderit exercitationem? Perferendis nisi officiis alias optio. Aut, id ipsam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure natus suscipit vero cumque, perferendis eius harum, deserunt, hic pariatur asperiores necessitatibus ipsa id molestiae. Modi non voluptas repellendus laboriosam nesciunt.</p>
+    <main>
+        ola ola ola Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi illo nam hic, saepe blanditiis dignissimos deserunt molestias architecto dolorem ea et esse! Ex maxime aut sit autem cumque expedita sapiente?
+    </main>
 
 
 
