--- a/PRODUTOS.html
+++ b/PRODUTOS.html
@@ -192,7 +192,7 @@
             }
             #foto-principal{
             height: 500px;
-            background: white url('imagems/ACMELLAPRODUTOS.jpg') no-repeat center  fixed;
+            background: white url('imagems/ACMELLAPRODUTOS.jpg') no-repeat center ;
             background-size: cover;
             margin-top: 60px;
             }
