--- a/PRODUTOS.html
+++ b/PRODUTOS.html
@@ -282,7 +282,7 @@
                 <div class="card-body">
                   <h5 class="card-title">hidratante Labial</h5>
                   <p class="card-text">R$ 55,00</p>
-                  <a href="#" class="btn btn-primary">Visitar</a>
+                  <a href="produto4.html" class="btn btn-primary">Visitar</a>
                 </div>
               </div>
               <div class="card" style="width: 18rem;">
