--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- CRIANDO O NOSSO MENU FIXO-->
@@ -38,7 +38,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Shampoo</h5>
                   <p class="card-text">O nosso shampoo revitalizante é formulado com ingredientes de alta qualidade para limpar suavemente e fortalecer os seus cabelos. Com uma textura luxuosa e uma fragrância encantadora, ele deixa os seus cabelos limpos, macios e prontos para brilhar.</p>
-                  <a href="#" class="btn btn-primary">Saiba Mais</a>
+                  <a href="pages/shampoo.html" class="btn btn-primary">Saiba Mais</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -46,7 +46,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Condicionador</h5>
                   <p class="card-text">O condicionador hidratante é o parceiro perfeito para o nosso shampoo. Ele desembaraça e suaviza os fios, proporcionando hidratação profunda e restaurando a saúde do cabelo. Os seus cabelos ficarão incrivelmente macios e fáceis de pentear. </p>
-                  <a href="#" class="btn btn-primary">Saiba Mais</a>
+                  <a href="pages/condicionador.html" class="btn btn-primary">Saiba Mais</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -54,11 +54,11 @@
                 <div class="card-body">
                   <h5 class="card-title">Mascara Capilar</h5>
                   <p class="card-text">A nossa máscara capilar reparadora é o segredo para cabelos radiantes. Esta fórmula intensiva nutre e revitaliza profundamente, reparando os danos causados pelo dia a dia. Use-a semanalmente para obter resultados surpreendentes.</p>
-                  <a href="#" class="btn btn-primary">Saiba Mais</a>
+                  <a href="pages/mascara-capilar.html" class="btn btn-primary">Saiba Mais</a>
                 </div>
             </div>
         </div>
-        <a href="PRODUTOS.html" class="btn btn-primary" id="produtos">MAIS PRODUTOS</a>
+        <a href="pages/PRODUTOS.html" class="btn btn-primary" id="produtos">MAIS PRODUTOS</a>
         <div id="amazonia2">
             <p>Beleza Amazônica, Qualidade <span style="color:  #ffb700;">ACMELLA</span>!</p>
         </div>
