mudanças no layout

--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="nav-bar">
-            <span class="material-symbols-outlined">home</span>
+            <a href="../index.html"><span class="material-symbols-outlined">home</span></a>
             <a href="login.html">
                 <h1>Cadastro</h1>
             </a>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="caixa-cep">
-                    <form action="compraConcluida.php" method="get">
+                    <form action="compraConcluida.html" method="get">
                         <p>Ensira o cep para o calculo do frete e finalizar a compra!</p>
                         <label for="cep">CEP:</label><br>
                         <input type="number" name="cep" id="cep" required placeholder="Ensira o cep">
