--- a/pages/login.html
+++ b/pages/login.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="nav-bar">
             <div class="historico">
-                <h1><a href="../index.html">Inicio</a> / <a href="#">Carrinho</a></h1>
+                <h1><a href="../index.html"><span class="material-symbols-outlined">home</span></a></h1>
             </div>
         </nav>
     </header>
@@ -22,7 +22,7 @@
                 <hr>
                 <div class="circulo"><span class="material-symbols-outlined">person</span></div>
                 <hr>
-                <div class="circulo" id="incompleto"><span class="material-symbols-outlined">shopping_cart</span></div>
+                <div class="circulo" id="incompleto1"><span class="material-symbols-outlined">shopping_cart</span></div>
                 <hr>
                 <div class="circulo" id="incompleto"><span class="material-symbols-outlined">done</span></div>
             </div>
@@ -30,7 +30,6 @@
             <img src="../imagems/undraw_Access_account_re_8spm (1).png" alt="" class="imagens-login">
             <div class="formulario">
                 <img src="../imagems/undraw_Login_re_4vu2.png" alt="" id="logo-login">
-                <h1>Cadastre-se</h1>
                 <form action="carrinho.html" method="get" autocomplete="on">
                     <label for="nome">Nome:</label>
                     <br>
